Update Исследование надежности заемщиков 1.ipynb

--- a/Исследование надежности заемщиков 1.ipynb
+++ b/Исследование надежности заемщиков 1.ipynb
@@ -33,7 +33,7 @@
     "id": "744d7639"
    },
    "source": [
-    "## Откройте таблицу и изучите общую информацию о данных"
+ 
    ]
   },
   {
@@ -48,9 +48,7 @@
     ]
    },
    "source": [
-    "**Задание 1. Импортируйте библиотеку pandas. Считайте данные из csv-файла в датафрейм и сохраните в переменную `data`. Путь к файлу:**\n",
-    "\n",
-    "`/datasets/data.csv`"
+
    ]
   },
   {
@@ -89,7 +87,7 @@
     ]
    },
    "source": [
-    "**Задание 2. Выведите первые 20 строчек датафрейма `data` на экран.**"
+
    ]
   },
   {
@@ -188,7 +186,7 @@
     ]
    },
    "source": [
-    "**Задание 3. Выведите основную информацию о датафрейме с помощью метода `info()`.**"
+   
    ]
   },
   {
@@ -265,7 +263,7 @@
     ]
    },
    "source": [
-    "**Задание 4. Выведите количество пропущенных значений для каждого столбца. Используйте комбинацию двух методов.**"
+   
    ]
   },
   {
@@ -312,7 +310,7 @@
     ]
    },
    "source": [
-    "**Задание 5. В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце вы обработаете на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` должен быть заполнен медианным доходом среди всех записей с тем же типом.**"
+  
    ]
   },
   {
@@ -352,7 +350,7 @@
     ]
    },
    "source": [
-    "**Задание 6. В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. Таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработайте значения в этом столбце: замените все отрицательные значения положительными с помощью метода `abs()`.**"
+   
    ]
   },
   {
@@ -379,7 +377,7 @@
     ]
    },
    "source": [
-    "**Задание 7. Для каждого типа занятости выведите медианное значение трудового стажа `days_employed` в днях.**"
+    
    ]
   },
   {
@@ -420,7 +418,7 @@
     "id": "38d1a030"
    },
    "source": [
-    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставьте их как есть. Тем более этот столбец не понадобится вам для исследования."
+    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставим их как есть. Тем более этот столбец не понадобится вам для исследования."
    ]
   },
   {
@@ -435,7 +433,7 @@
     ]
    },
    "source": [
-    "**Задание 8. Выведите перечень уникальных значений столбца `children`.**"
+
    ]
   },
   {
@@ -470,8 +468,7 @@
     ]
    },
    "source": [
-    "**Задание 9. В столбце `children` есть два аномальных значения. Удалите строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
-   ]
+   
   },
   {
    "cell_type": "code",
@@ -497,7 +494,7 @@
     ]
    },
    "source": [
-    "**Задание 10. Ещё раз выведите перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
+    
    ]
   },
   {
@@ -544,7 +541,7 @@
     ]
    },
    "source": [
-    "**Задание 11. Заполните пропуски в столбце `days_employed` медианными значениями по каждому типу занятости `income_type`.**"
+   
    ]
   },
   {
@@ -572,7 +569,7 @@
     ]
    },
    "source": [
-    "**Задание 12. Убедитесь, что все пропуски заполнены. Проверьте себя и ещё раз выведите количество пропущенных значений для каждого столбца с помощью двух методов.**"
+   
    ]
   },
   {
@@ -631,7 +628,7 @@
     ]
    },
    "source": [
-    "**Задание 13. Замените вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
+    
    ]
   },
   {
@@ -669,7 +666,7 @@
     ]
    },
    "source": [
-    "**Задание 14. Обработайте неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведите их к нижнему регистру. Проверьте остальные столбцы.**"
+    
    ]
   },
   {
@@ -722,7 +719,7 @@
     ]
    },
    "source": [
-    "**Задание 15. Выведите на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалите их.**"
+   
    ]
   },
   {
@@ -782,7 +779,7 @@
     ]
    },
    "source": [
-    "**Задание 16. На основании диапазонов, указанных ниже, создайте в датафрейме `data` столбец `total_income_category` с категориями:**\n",
+   
     "\n",
     "- 0–30000 — `'E'`;\n",
     "- 30001–50000 — `'D'`;\n",
@@ -791,7 +788,7 @@
     "- 1000001 и выше — `'A'`.\n",
     "\n",
     "\n",
-    "**Например, кредитополучателю с доходом 25000 нужно назначить категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Используйте собственную функцию с именем `categorize_income()` и метод `apply()`.**"
+    "**Например, кредитополучателю с доходом 25000 нужно назначить категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Используем собственную функцию с именем `categorize_income()` и метод `apply()`.**"
    ]
   },
   {
@@ -849,7 +846,7 @@
     ]
    },
    "source": [
-    "**Задание 17. Выведите на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
+   
    ]
   },
   {
@@ -898,7 +895,7 @@
     ]
    },
    "source": [
-    "**Задание 18. Создайте функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
+    
     "\n",
     "- `'операции с автомобилем'`,\n",
     "- `'операции с недвижимостью'`,\n",
@@ -907,7 +904,7 @@
     "\n",
     "**Например, если в столбце `purpose` находится подстрока `'на покупку автомобиля'`, то в столбце `purpose_category` должна появиться строка `'операции с автомобилем'`.**\n",
     "\n",
-    "**Используйте собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучите данные в столбце `purpose` и определите, какие подстроки помогут вам правильно определить категорию.**"
+    "**Используем собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучим данные в столбце `purpose` и определим, какие подстроки помогут правильно определить категорию.**"
    ]
   },
   {
